--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Performance08|Repository_name|fairozmumtaheen01</title>
+    <title>Performance08|WB2302036_Performance08|fairozmumtaheen01</title>
     <link rel="stylesheet" href="style.css">
   <style>
       h1{
